K8S/players-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: players-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playerservice
  template:
    metadata:
      labels:
        app: playerservice
    spec:
      containers:
        - name: playerservice
          image: binarythistle/playerservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: players-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: playerservice
  ports:
  - name: playerservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: plafromgrpc
    protocol: TCP
    port: 666
    targetPort: 666
