K8S/players-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: playernpservice-srv
spec:
  type: NodePort
  selector:
    app: playerservice
  ports:
    - name: playerservice
      protocol: TCP
      port: 80
      targetPort: 80
